Finished! Confetti is ready

--- a/FirstParticle.cbp
+++ b/FirstParticle.cbp
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8" standalone="yes" ?>
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
@@ -105,10 +105,16 @@
 			<Add library="Comdlg32" />
 		</Linker>
 		<ExtraCommands>
-			<Add after="xcopy /e /i /y &quot;$(PROJECT_DIR)..\..\..\export\win_cb\*.dll&quot;  &quot;$(PROJECT_DIR)bin&quot;" />
-			<Add after="cmd /c if not exist &quot;$(PROJECT_DIR)bin/data&quot; mkdir &quot;$(PROJECT_DIR)bin/data&quot;" />
+			<Add after='xcopy /e /i /y &quot;$(PROJECT_DIR)..\..\..\export\win_cb\*.dll&quot;  &quot;$(PROJECT_DIR)bin&quot;' />
+			<Add after='cmd /c if not exist &quot;$(PROJECT_DIR)bin/data&quot; mkdir &quot;$(PROJECT_DIR)bin/data&quot;' />
 			<Mode after="always" />
 		</ExtraCommands>
+		<Unit filename="src\Particle.cpp" />
+		<Unit filename="src\Particle.h" />
+		<Unit filename="src\ParticleEmitter.cpp" />
+		<Unit filename="src\ParticleEmitter.h" />
+		<Unit filename="src\ball.cpp" />
+		<Unit filename="src\ball.h" />
 		<Unit filename="src\main.cpp">
 			<Option virtualFolder="src" />
 		</Unit>
